# aoc2025

./: .gitignore  CMakeLists.txt  README.md
day01/: CMakeLists.txt  README.md
day01/src/: main.cpp
day02/: CMakeLists.txt
day02/src/: main.cpp
day03/: CMakeLists.txt
day03/src/: main.cpp
day04/: CMakeLists.txt
day04/src/: main.cpp
day05/: CMakeLists.txt
day05/src/: main.cpp
day06/: CMakeLists.txt
day06/src/: main.cpp
day07/: CMakeLists.txt
day07/src/: main.cpp
day08/: CMakeLists.txt
day08/src/: main.cpp
day09/: CMakeLists.txt
day09/src/: main.cpp
day10/: CMakeLists.txt  README.md
day10/src/: main.cpp  main1.cpp  main2.cpp
day11/: CMakeLists.txt
day11/src/: main.cpp
day12/: CMakeLists.txt
day12/src/: main.cpp
util/: CMakeLists.txt
util/include/util/: algorithm.h  funcional.h  functors.h  geometry2d.h  geometry3d.h  iterator.h  numeric.h  stopwatch.h  trace.h  views.h
